@@ -91,10 +91,10 @@ src/planner-task-dialog.c
 src/planner-task-popup.c
 src/planner-task-tree.c
 src/planner-task-view.c
-src/planner-ttable-print.c
-src/planner-ttable-row.c
-src/planner-ttable-tree.c
-src/planner-ttable-view.c
+src/planner-usage-print.c
+src/planner-usage-row.c
+src/planner-usage-tree.c
+src/planner-usage-view.c
 src/planner-view.c
 src/planner-window.c
 src/planner-working-time-dialog.c
