@@ -1,5 +1,7 @@
 2005-04-16  Richard Hult  <richard@imendio.com>
 
+	* src/planner-usage-*: Rename from planner-ttable-*.
+
 	* src/Makefile.am: Reorganize views and make them
 	builtin. Simplify a lot.
 
